# mini-projects

./: .gitignore  Dockerfile  QUICKSTART.md  README.md  docker-compose.yaml  index.html  nginx.conf  start.sh
fuel-tracker/: README.md  app.py  charts.py  database.py  fetcher.py  pyproject.toml
fuel-tracker/data/: urls.txt
fuel-tracker/static/: styles.css
fuel-tracker/templates/: index.html  layout.html  station.html
kleinanzeigen-map/: Dockerfile  README.md  app.py  pyproject.toml
kleinanzeigen-map/kleinanzeigen/: __init__.py  scraper.py
kleinanzeigen-map/static/: styles.css
kleinanzeigen-map/templates/: index.html  layout.html
nginx/: nginx.conf
recipe-book/: .env.example  README.md  app.py  pyproject.toml
recipe-book/recipe_book/: __init__.py  config.py  embedding.py  gemini.py  models.py  routes.py  services.py  utils.py
recipe-book/recipebook/: __init__.py  config.py  embedding.py  gemini.py  models.py  routes.py  services.py  utils.py
recipe-book/static/: styles.css
recipe-book/templates/: home.html  layout.html  recipe_detail.html  recipe_form.html
scripts/: add-project.sh  manage.sh
