[tool.poetry]
name = "kleinanzeigen"
version = "0.1.0"
description = ""
authors = ["Moritz Enderle <contact@moritzenderle.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.31.0"
sqlalchemy = "^2.0.23"
beautifulsoup4 = "^4.12.2"
flask = "^3.1.2"
flask-wtf = "^1.2.2"
wtforms = "^3.2.1"
gunicorn = "^23.0.0"
geopy = "^2.4.1"
folium = "^0.20.0"
pandas = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
